# ghuzzle

./: .gitignore  LICENSE  README.md  action.yml  pyproject.toml  serve.sh
prompts/: abort.txt  add_prefix_single_folder.txt  gh_action.txt  info.txt  listing.txt
release/: release_new.sh
samples/: definition.json  ghuzzle.json  listing.json
src/ghuzzle/: __init__.py  __main__.py  cli.py  ghuzzle.py  listing.css
