[project]
name = "ghuzzle"
version = "0.1.0"
description = "Aggregate releases from multiple Github repositories (including private ones) into a local directory"
license = "MIT"
readme = "README.md"
authors = [{ name = "Guilhem Vellut", email = "guilhem.vellut@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.1",
    "colorama>=0.4.6",
    "pygithub>=2.8.1",
    "htpy>=25.12.0",
    "attrs>=25.4.0",
]

[project.scripts]
ghuzzle = "ghuzzle.__main__:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
